# caferacer

./: .gitignore
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260710_0001_initial_schema.py  20260712_0002_course_centric_routes.py  20260712_0003_cafe_import_review.py  20260715_0004_drive_tracking.py  20260715_0005_social_platform.py  20260715_0006_lightning_and_crew_rankings.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: __init__.py  admin.py  admin_courses.py  admin_moderation.py  auth.py  cafes.py  community.py  (+10 more)
backend/app/core/: config.py  database.py  security.py
backend/app/integrations/: __init__.py  tmap.py
backend/app/models/: __init__.py  catalog.py  drive.py  enums.py  social.py  user.py
backend/app/repositories/: __init__.py  catalog.py  drive_records.py  user.py
backend/app/schemas/: admin.py  auth.py  catalog.py  community.py  course_admin.py  crews.py  daily_courses.py  drive_records.py  lightning_courses.py  profile.py  recommendations.py
backend/app/services/: auth.py  drive_tracking.py  oauth.py
backend/data/: catalog.template.json  카페(Sheet1).csv
backend/data/generated_courses/: 테스트_드라이브_코스.json  테스트용_드라이브.json
backend/data/raw_paths/: TESTGPX.gpx
backend/scripts/: create_admin_access_token.py  import_course.py  seed_catalog.py  set_admin.py  verify_cafe_addresses.py
backend/tests/: conftest.py  test_community.py  test_course_admin_schema.py  test_drive_tracking.py  test_lightning_schemas.py
(+62 files in other folders)
