[project]
name = "drive-cafe-api"
version = "0.1.0"
description = "Drive cafe recommendation platform API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "google-auth>=2.36,<3.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "PyJWT>=2.10,<3.0",
  "pymysql>=1.1,<2.0",
  "requests>=2.32,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
